<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#DDDDDD">




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="0"
        android:id="@+id/tvDisplay"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/tableLayout"
        android:layout_alignStart="@+id/tableLayout"
        android:gravity="right"
        android:textSize="56sp"
        android:textColor="#00FFFF"
        android:background="#FF000000"/>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@+id/tvDisplay"
        android:layout_alignParentStart="true"
        android:orientation="horizontal"
        android:id="@+id/tableLayout">



        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="0.5in"
                android:layout_height="0.5in"
                android:text=""
                android:layout_column="0"
                android:id="@+id/btn_blank"
                android:textSize="42sp"
                />

            <Button
                android:layout_width="0.5in"
                android:layout_height="0.5in"
                android:text="@string/op_clearall"
                android:layout_column="2"
                android:id="@+id/btn_op_clearall"
                android:textSize="42sp"
                android:onClick="operationPressed"
                />

            <Button
                android:layout_width="0.5in"
                android:layout_height="0.5in"
                android:text="@string/op_clear"
                android:layout_column="3"
                android:id="@+id/btn_op_clear"
                android:textSize="42sp"
                android:onClick="operationPressed" />

            <Button
                android:layout_width="0.5in"
                android:layout_height="0.5in"
                android:text="@string/op_add"
                android:layout_column="4"
                android:id="@+id/btn_op_add"
                android:textSize="42sp"
                android:onClick="operationPressed" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="0.5in"
                android:layout_height="0.5in"
                android:text="@string/digit_7"
                android:layout_column="0"
                android:id="@+id/btn_digit_7"
                android:textSize="42sp"
                android:onClick="digitPressed"/>

            <Button
                android:layout_width="0.5in"
                android:layout_height="0.5in"
                android:text="@string/digit_8"
                android:layout_column="2"
                android:id="@+id/btn_digit_8"
                android:textSize="42sp"
                android:onClick="digitPressed"/>

            <Button
                android:layout_width="0.5in"
                android:layout_height="0.5in"
                android:text="@string/digit_9"
                android:layout_column="3"
                android:id="@+id/btn_digit_9"
                android:textSize="42sp"
                android:onClick="digitPressed"/>

            <Button
                android:layout_width="0.5in"
                android:layout_height="0.5in"
                android:text="@string/op_subtract"
                android:layout_column="4"
                android:id="@+id/btn_op_subtract"
                android:onClick="operationPressed"
                android:textSize="42sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="0.5in"
                android:layout_height="0.5in"
                android:text="@string/digit_6"
                android:layout_column="0"
                android:id="@+id/btn_digit_6"
                android:textSize="42sp"
                android:onClick="digitPressed"/>

            <Button
                android:layout_width="0.5in"
                android:layout_height="0.5in"
                android:text="@string/digit_5"
                android:layout_column="2"
                android:id="@+id/btn_digit_5"
                android:textSize="42sp"
                android:onClick="digitPressed"/>

            <Button
                android:layout_width="0.5in"
                android:layout_height="0.5in"
                android:text="@string/digit_4"
                android:layout_column="3"
                android:id="@+id/btn_digit_4"
                android:textSize="42sp"
                android:onClick="digitPressed"/>

            <Button
                android:layout_width="0.5in"
                android:layout_height="0.5in"
                android:text="@string/op_multiply"
                android:layout_column="4"
                android:id="@+id/btn_op_multiply"
                android:textSize="42sp"
                android:onClick="operationPressed"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="0.5in"
                android:layout_height="0.5in"
                android:text="@string/digit_3"
                android:layout_column="0"
                android:id="@+id/btn_digit_3"
                android:textSize="42sp"
                android:onClick="digitPressed"/>

            <Button
                android:layout_width="0.5in"
                android:layout_height="0.5in"
                android:text="@string/digit_2"
                android:layout_column="2"
                android:id="@+id/btn_digit_2"
                android:textSize="42sp"
                android:onClick="digitPressed"/>

            <Button
                android:layout_width="0.5in"
                android:layout_height="0.5in"
                android:text="@string/digit_1"
                android:layout_column="3"
                android:id="@+id/btn_digit_1"
                android:textSize="42sp"
                android:onClick="digitPressed"/>

            <Button
                android:layout_width="0.5in"
                android:layout_height="0.5in"
                android:layout_column="4"
                android:id="@+id/btn_op_divide"
                android:textSize="42sp"
                android:text="@string/op_divide"
                android:onClick="operationPressed"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="0.5in"
                android:layout_height="0.5in"
                android:text="@string/op_negate"
                android:layout_column="0"
                android:id="@+id/btn_op_negate"
                android:textSize="42sp"
                android:onClick="operationPressed"/>

            <Button
                android:layout_width="0.5in"
                android:layout_height="0.5in"
                android:text="@string/digit_."
                android:layout_column="2"
                android:id="@+id/btn_decimal"
                android:textSize="42sp"
                android:onClick="digitPressed"/>

            <Button
                android:layout_width="0.5in"
                android:layout_height="0.5in"
                android:text="@string/digit_0"
                android:layout_column="3"
                android:id="@+id/btn_digit_0"
                android:textSize="42sp"
                android:onClick="digitPressed"/>

            <Button
                android:layout_width="0.5in"
                android:layout_height="0.5in"
                android:text="@string/op_equals"
                android:layout_column="4"
                android:id="@+id/btn_op_equals"
                android:textSize="42sp"
                android:onClick="operationPressed"/>
        </TableRow>
    </TableLayout>

</RelativeLayout>
